# LuxCore

./: CMakeLists.txt  Configuration.cmake  GNUmakefile  README.md
cmake/: AssembleBinDirs.cmake  Dependencies.cmake  PlatformSpecific.cmake
extlibs/: CMakeLists.txt
extlibs/cmake/: blosc.cmake  boost.cmake  bzip2.cmake  check.cmake  download.cmake  eigen.cmake  embree.cmake  expat.cmake  fmt.cmake  imath.cmake  jpeg.cmake  json.cmake  minizipng.cmake  oidn.cmake  opencolorio.cmake  openexr.cmake  openimageio.cmake  openjpeg.cmake  opensubdiv.cmake  openvdb.cmake  options.cmake  png.cmake  pugixml.cmake  pybind11.cmake  robinmap.cmake  spdlog.cmake  tbb.cmake  tiff.cmake  versions.cmake  webp.cmake  yamlcpp.cmake  zlib.cmake
extlibs/patches/: boost.user.jam.in
samples/luxcoreconsole/: CMakeLists.txt
samples/luxcoredemo/: CMakeLists.txt
samples/luxcorescenedemo/: CMakeLists.txt
samples/luxcoreui/: CMakeLists.txt  epsilonwindow.cpp  filmchannelswindow.cpp  filmoutputswindow.cpp  haltconditionswindow.cpp  helpwindow.cpp  imagewindow.cpp  logwindow.cpp  luxcoreapp.h  objecteditorwindow.cpp  ocldevicewindow.cpp  renderenginewindow.cpp  statswindow.cpp  uiloop.cpp  uimenu.cpp
samples/luxcoreui/imgui/: CMakeLists.txt  imconfig.h  imgui.ini
samples/luxcoreui/imgui/ImGuiFileDialog/: ImGuiFileDialogConfig.h
src/luxcore/: CMakeLists.txt
src/luxrays/: CMakeLists.txt
src/luxrays/utils/: cuda.cpp  ocl.cpp
src/slg/: CMakeLists.txt  slg.cpp
src/slg/textures/: blender_noiselib.cpp
tests/luxcoreimplserializationdemo/: CMakeLists.txt
